Fix form becoming de-centered on narrow screen

--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,7 @@ main {
 }
 
 #controls {
+  min-width: min-content;
   width: 40%;
   padding: var(--standard-padding);
 }
